# core

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  main.cpp
libs/Manager/: Manager.cpp  Manager.h
libs/ModuleLoader/: ModuleLoader.cpp  ModuleLoader.h
